--- a/main.css
+++ b/main.css
@@ -120,7 +120,7 @@ body {
 .nav__list {
     position: fixed;
     overflow-y: scroll;
-    top: 0;
+    top: 50px;
     left: 0;
     bottom: 0;
     right: 0;
@@ -128,6 +128,7 @@ body {
     background: rgb(203, 223, 189);
     font-size: 3rem;
     padding: 40px;
+    margin-top: 20px; /* Lägg till denna rad */
     transform: translateX(100%);
     /*translate(100vw) rotate (45deg); */
     transition: 0.3s cubic-bezier(0.75, 0, 0.25, 1);
