--- a/style.css
+++ b/style.css
@@ -698,6 +698,7 @@ input:not(:checked)+.slider.large {
         /* Lägg till eventuella ytterligare stilar som behövs för desktop här */
         margin: 10px;
         /* Halva marginalvärdet, eftersom det tillämpas på båda sidor */
+        min-height: 700px;
         height: 700px; /* Öka höjden här efter behov, exempelvis 700px */
 
     }
