--- a/style2.css
+++ b/style2.css
@@ -125,17 +125,28 @@ html {
 }
 
 .matratt {
-    width: 25%;
-    /* Maträttens bredd tar hela bredden av sin container */
-    overflow: hidden;
-    /* Göm innehåll som överskrider maträttens storlek */
+    flex: 0 0 250px;
+    /* Fast bredd, justera detta värde efter behov */
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    box-sizing: border-box;
+    align-self: flex-start;
     position: relative;
-    /* Sätt positionering för absolut positionerade barn */
-    border-top-left-radius: 5px;
-    /* Runda övre vänstra hörnet */
-    border-top-right-radius: 5px;
-    /* Runda övre högra hörnet */
+    width: 100%;
+    background: white;
+    border: 1px solid rgb(219, 219, 219);
+    box-shadow: none;
+    display: block;
+    margin: 0px 0px 12px;
+    padding: 0px;
+    height: auto;
+    /* Gör så att höjden anpassas automatiskt */
+    min-height: 500px;
+    /* Minimum höjd för att säkerställa konsistens */
 }
+
 
 .matratt-info {
     padding: 10px;
@@ -165,16 +176,19 @@ html {
     left: 0;
 }
 
+
 .matratt-title {
-    margin: 0;
-    /* Ta bort default marginaler */
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 5px;
+    margin: 5px 0;
+    border-radius: 10px;
+    font-size: 16px;
+    /* Justera storleken efter dina behov */
+    color: white;
+    text-align: center;
     overflow: hidden;
-    /* Göm överflödig text */
-    white-space: nowrap;
-    /* Förhindra radbrytningar */
-    text-overflow: ellipsis;
-    /* Lägg till ... för överflödig text */
 }
+
 
 @keyframes ticker {
     0% {
@@ -312,46 +326,32 @@ html {
 
 #pagination-controls button {
     background-color: white;
-    /* Vit bakgrund */
     color: black;
-    /* Svart text */
     border: 1px solid #ddd;
-    /* Lätt grå kantlinje */
     padding: 10px 15px;
-    /* Padding för att göra knappen större */
     margin: 5px;
-    /* Avstånd mellan knapparna */
     border-radius: 5px;
-    /* Lätt rundade hörn */
     cursor: pointer;
-    /* Ändra muspekaren till en hand när den svävar över knappen */
     font-size: 1em;
-    /* Storlek på texten */
     transition: background-color 0.3s;
-    /* Smidig övergång för bakgrundsfärg */
-    font-family: 'League Spartan', cursive;
-    /* Din huvudfont */
 }
 
 #pagination-controls button:hover {
     background-color: rgb(255, 247, 179);
-    /* Ljusgul bakgrund när muspekaren svävar över */
 }
 
-/* Uppdateringar för #pagination-controls */
 #pagination-controls {
     position: fixed;
-    /* Istället för absolute */
-    bottom: 25px;
-    /* Höjden på din footer */
+    bottom: 15px;
     left: 0;
     right: 0;
-    z-index: 2;
     text-align: center;
-    margin-bottom: 20px;
-    /* Detta kan behöva justeras beroende på exakt placering */
-    padding: 10px 0;
+    padding: 8px 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Lägg till en mild transparent svart bakgrund */
+    z-index: 2000;
 }
+
 
 #pagination-controls.hidden {
     display: none;
@@ -767,16 +767,25 @@ html {
 
 /* Visa fler-knappens stil */
 .show-more-btn {
-    display: flex; /* Använder flexbox för att centrera innehåll */
-    justify-content: center; /* Centrerar innehåll horisontellt */
-    align-items: center; /* Centrerar innehåll vertikalt */
-    width: 100px; /* Begränsar knappens bredd */
-    height: 100px; /* Begränsar knappens höjd */
-    margin: 5px auto; /* Ger lite utrymme runt knappen och centrerar den horisontellt */
-    background-color: transparent; /* Gör bakgrunden transparent */
+    display: flex;
+    /* Använder flexbox för att centrera innehåll */
+    justify-content: center;
+    /* Centrerar innehåll horisontellt */
+    align-items: center;
+    /* Centrerar innehåll vertikalt */
+    width: 100px;
+    /* Begränsar knappens bredd */
+    height: 100px;
+    /* Begränsar knappens höjd */
+    margin: 5px auto;
+    /* Ger lite utrymme runt knappen och centrerar den horisontellt */
+    background-color: transparent;
+    /* Gör bakgrunden transparent */
     border: none;
-    border-radius: 25px; /* Ger en cirkelrund form */
-    padding: 0; /* Tar bort padding för att undvika extra storlek */
+    border-radius: 25px;
+    /* Ger en cirkelrund form */
+    padding: 0;
+    /* Tar bort padding för att undvika extra storlek */
 }
 
 /* Hover-effekt för "Visa fler"-knappen */
@@ -786,12 +795,15 @@ html {
 }
 
 .show-more-btn img {
-    width: 70%; /* Ställer in en specifik storlek för ikonerna */
+    width: 70%;
+    /* Ställer in en specifik storlek för ikonerna */
     height: auto;
-    display: block; /* Ser till att bilden inte tar extra utrymme vertikalt */
+    display: block;
+    /* Ser till att bilden inte tar extra utrymme vertikalt */
 }
 
 @media (min-width: 768px) {
+
     /* Stilar för tablet */
     .show-more-btn {
         width: 60px;
@@ -801,6 +813,7 @@ html {
 }
 
 @media (min-width: 1024px) {
+
     /* Stilar för desktop */
     .show-more-btn {
         width: 70px;
@@ -973,12 +986,16 @@ html {
     top: 0;
     left: 0;
     width: 100%;
-    height: 70px; /* Justera detta värde baserat på din design */
-    background-color: #faf0ca; /* Gula bakgrundsfärgen */
-    z-index: 1000; /* Håller headern över andra element */
+    height: 70px;
+    /* Justera detta värde baserat på din design */
+    background-color: #faf0ca;
+    /* Gula bakgrundsfärgen */
+    z-index: 1000;
+    /* Håller headern över andra element */
     /* box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Lägg till en skugga för definition */
 }
 
 body {
-    padding-top: 11px; /* Ge plats för headern så innehåll inte överlappar */
+    padding-top: 11px;
+    /* Ge plats för headern så innehåll inte överlappar */
 }
