--- a/startsida-image-links.css
+++ b/startsida-image-links.css
@@ -100,7 +100,7 @@ video {
     left: 0;
     width: 100%;
     height: 70px; /* Justera detta värde baserat på din design */
-    background-color: #faf0ca; /* Gula bakgrundsfärgen */
+    background-color: rgb(242, 242, 240); /* Gula bakgrundsfärgen */
     z-index: 1000; /* Håller headern över andra element */
     /* box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Lägg till en skugga för definition */
 }
