--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ html {
     width: 100%;
     height: 100%;
     /* background-color: rgb(106, 4, 15); */
-    background-color: rgb(250, 240, 202);
+    background-color: rgb(242, 242, 240);
     z-index: -1;
 }
 
@@ -1026,7 +1026,7 @@ input:not(:checked)+.slider.large {
     left: 0;
     width: 100%;
     height: 70px; /* Justera detta värde baserat på din design */
-    background-color: #faf0ca; /* Gula bakgrundsfärgen */
+    background-color: rgb(242, 242, 240)/*  #faf0ca; Gula bakgrundsfärgen */
     z-index: 1000; /* Håller headern över andra element */
     /* box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Lägg till en skugga för definition */
 }
