--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ html {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    
+
     padding-bottom: 100px;
     /* Eller höjden på din footer */
 }
@@ -187,7 +187,8 @@ html {
 #data-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around; /* Alternativt använd 'center', 'space-between', etc. */
+    justify-content: space-around;
+    /* Alternativt använd 'center', 'space-between', etc. */
     align-items: flex-start;
     margin-top: 20px;
     padding-bottom: 20px;
@@ -197,8 +198,9 @@ html {
 }
 
 .matratt {
-    flex: 0 0 250px; /* Fast bredd, justera detta värde efter behov */
- 
+    flex: 0 0 250px;
+    /* Fast bredd, justera detta värde efter behov */
+
     margin: auto;
     padding: 10px;
     border-radius: 10px;
@@ -699,7 +701,8 @@ input:not(:checked)+.slider.large {
         margin: 10px;
         /* Halva marginalvärdet, eftersom det tillämpas på båda sidor */
         min-height: 750px;
-        height: 750px; /* Öka höjden här efter behov, exempelvis 700px */
+        height: 750px;
+        /* Öka höjden här efter behov, exempelvis 700px */
 
     }
 
@@ -1025,12 +1028,16 @@ input:not(:checked)+.slider.large {
     top: 0;
     left: 0;
     width: 100%;
-    height: 70px; /* Justera detta värde baserat på din design */
-    background-color: rgb(242, 242, 240)/*  #faf0ca; Gula bakgrundsfärgen */
-    z-index: 1000; /* Håller headern över andra element */
+    height: 70px;
+    /* Justera detta värde baserat på din design */
+    background-color: rgb(242, 242, 240)
+        /*  #faf0ca; Gula bakgrundsfärgen */
+        z-index: 1000;
+    /* Håller headern över andra element */
     /* box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Lägg till en skugga för definition */
 }
 
 body {
-    padding-top: 11px; /* Ge plats för headern så innehåll inte överlappar */
+    padding-top: 11px;
+    /* Ge plats för headern så innehåll inte överlappar */
 }
