--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ body {
     min-height: 100vh;  /* Detta gör att kroppen är minst lika hög som hela viewport-höjden.*/
     display: flex;
     flex-direction: column;  /* Gör att body använder flexbox med vertikal orientering.*/
-    justify-content: space-between;  /* Distribuerar utrymmet så att footern kan sitta längst ner.*/
+    justify-content: center;  /* Distribuerar utrymmet så att footern kan sitta längst ner.*/
 }
 
 
