--- a/style.css
+++ b/style.css
@@ -924,3 +924,12 @@ body {
     height: 100vh; /* Gör så att det täcker hela fönstret i höjdled */
     text-align: center;
 }
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'League Spartan', sans-serif;
+    min-height: 100vh;  /* Detta gör att kroppen är minst lika hög som hela viewport-höjden.*/
+    display: flex;
+    flex-direction: column;  /* Gör att body använder flexbox med vertikal orientering.*/
+    justify-content: center;  /* Distribuerar utrymmet så att footern kan sitta längst ner.*/
+}
