--- a/contact.css
+++ b/contact.css
@@ -1,12 +1,12 @@
 body {
-    background-color: #faf0ca; /* Din önskade gul-sandfärg */
+    background-color: #f2f2f0; /* Din önskade gul-sandfärg */
     margin: 0; /* Tar bort standardmarginalen runt `body` */
     font-family: 'Exo 2', sans-serif;
     
 }
 
 .contact-container {
-    background-color: #faf0ca;
+    background-color: #f2f2f0;
     /* Ersätt med din önskade bakgrundsfärg */
     padding: 5px;
     max-width: 800px;
@@ -60,11 +60,18 @@ body {
     left: 0;
     width: 100%;
     height: 70px; /* Justera detta värde baserat på din design */
-    background-color: #faf0ca; /* Gula bakgrundsfärgen */
+    background-color: #ffffff; /* Gula bakgrundsfärgen */
     z-index: 1000; /* Håller headern över andra element */
     /* box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Lägg till en skugga för definition */
 }
 
 body {
     padding-top: 11px; /* Ge plats för headern så innehåll inte överlappar */
+}
+
+.text-image img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    margin-top: 110px;
 }
